# Predictive-Sales-Forecasting

./: .gitignore  README.md  analysis.ipynb  app.py  dashboard_data.pkl  generate_summary.py  plan.md  pyproject.toml  reference.ipynb  requirements.txt  summary.docx  task.md
.streamlit/: config.toml
