[project]
name = "salesforecasting-shreyasyarabadi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.3.0",
    "kagglehub[pandas-datasets]",
    "matplotlib",
    "numpy",
    "pandas",
    "scikit-learn>=1.9.0",
    "seaborn>=0.13.2",
]
