[project]
name = "salesforecasting-shreyasyarabadi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.3.0",
    "kagglehub[pandas-datasets]",
    "matplotlib",
    "numpy",
    "pandas",
    "plotly>=6.9.0",
    "prophet",
    "python-docx>=1.2.0",
    "scikit-learn>=1.9.0",
    "seaborn>=0.13.2",
    "statsmodels",
    "streamlit>=1.59.2",
    "xgboost",
]
